--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.18",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuexfire": "^3.2.0-alpha.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
